add better previews

--- a/static/index.html
+++ b/static/index.html
@@ -12,11 +12,15 @@
     <meta property="og:title" content="Substack Classic" />
     <meta property="og:description"
           content="View any Substack newsletter in classic newspaper format." />
+    <meta property="og:image" content="https://substack.aadibajpai.com/img/screenshot.png" />
+    <meta property="og:url" content="https://substack.aadibajpai.com" />
+    <meta property="og:type" content="website" />
     <!-- tw -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Substack Classic">
     <meta name="twitter:description"
           content="View any Substack newsletter in classic newspaper format.">
+    <meta name="twitter:image" content="https://substack.aadibajpai.com/img/screenshot.png">
 
     <body>
         <noscript>Please enable JavaScript to load stories.</noscript>
